--- a/democratos/CreateYourLaws/templates/GetReflection.html
+++ b/democratos/CreateYourLaws/templates/GetReflection.html
@@ -172,6 +172,7 @@
                                 <input type="hidden" name="typeform" value="oppf">
                                 <input type="hidden" name="typeref" value="{{typeref}}">
                                 <input type="hidden" name="ref_id" value="{{ref.id}}">
+                                <input type="hidden" name="IsModif" value="">
                                 <!-- <input type="hidden" name="ref_id" value="{{ref.id}}"> -->
                                 <button type="submit" class="posopinion" name="btnoppform">Poster le point de vue</button>
                             </form>
@@ -220,6 +221,7 @@
                                 <input type="hidden" name="typeform" value="opnf">
                                 <input type="hidden" name="typeref" value="{{typeref}}">
                                 <input type="hidden" name="ref_id" value="{{ref.id}}">
+                                <input type="hidden" name="IsModif" value="">
                                 <button type="submit" class="negopinion" name="btnopnform">Poster le point de vue</button>
                             </form>     
                         </div>    
@@ -283,6 +285,7 @@
                     <input type="hidden" name="typeform" value="prpf">
                     <input type="hidden" name="typeref" value="{{typeref}}">
                     <input type="hidden" name="ref_id" value="{{ref.id}}">
+                    <input type="hidden" name="IsModif" value="">
                     <button type="submit" class="butprp" name="prpform">Poster votre proposition </button>
                 </form> 
         </div>
