--- a/democratos/CreateYourLaws/templates/GetForm.html
+++ b/democratos/CreateYourLaws/templates/GetForm.html
@@ -12,7 +12,7 @@
 	{% endif%}
 <button type="submit" class="but{{typeform}}" name="{{typeform}}form{{idref}}"> Envoyer </button>
 {% if IsModif %}
-	<button class="but{{typeform}}" name="Cancel{{typeform}}form"> Annuler </button>
+	<button class="but{{typeform}}" name="Cancel{{typeform}}{{idform}}form"> Annuler </button>
 {% endif%}
 </form> 
 <script type="text/javascript" src="{% static "ckeditor/ckeditor-init.js" %}"></script>
