--- a/democratos/CreateYourLaws/templates/obsolete/childcomments.html
+++ b/democratos/CreateYourLaws/templates/obsolete/childcomments.html
@@ -3,7 +3,7 @@
 
 
 {% autoescape off %}
-<section id="{{typeref}}{{id_ref}}childcomments">
+<section id="{{typeref}}debate{{id_ref}}">
     <table>
     <tbody>    
          {% for x in listcom %}
