--- a/democratos/CreateYourLaws/static/css/style.css
+++ b/democratos/CreateYourLaws/static/css/style.css
@@ -417,7 +417,50 @@ section form{
 }
 
 .SmallMenu{
-	color: blue;
 	text-decoration: underline, bold;
 	float: right;
 }
+.SmallMenu ul {
+	margin:0;
+	padding:0;
+	list-style-type:none;
+	text-align:left;
+ }
+.SmallMenu li {
+	float:left;
+	font-weight: bold;
+	margin:auto;
+	padding:0;
+ }
+.SmallMenu li ins {
+	display:block;
+	width:100px;
+	text-decoration:none;
+	padding:5px;
+ }
+.SmallMenu li ins:hover {
+ 	color: black;
+ }
+
+.SmallMenu ul li ul {
+	display:none;
+ }
+
+.SmallMenu ul li:hover ul {
+ 	display:block;
+ }
+
+.SmallMenu li:hover ul li {
+ 	float:none;
+ }
+ 
+.SmallMenu li ul {
+ 	position:absolute;
+ 	border-width: 1px;
+	border-color: grey;
+	border-style: solid;
+	border-radius: 2px;
+	background-color: grey;
+	box-shadow: 2px 2px 1px #aaa;
+ }
+
