--- a/democratos/CreateYourLaws/static/css/style.css
+++ b/democratos/CreateYourLaws/static/css/style.css
@@ -85,14 +85,6 @@ section{
 	width: 98%;
 }
 
-div td {
-	position: relative;
-    top: 1em;
-    bottom: 1em;
-    left: 1em;
-    right: 1em;
-}
-
 section p {
 	text-align: left;
 }
@@ -101,8 +93,28 @@ section ul {
 	text-align: left;
 }
 
-section table{
-	text-align: left;	
+table{
+	// overflow: auto;
+	overflow-wrap: break-word;
+	text-align: left;
+	/*
+	display: -webkit-box;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	display: flex;
+	flex-direction: column;
+	flex-wrap: wrap;
+	flex-grow: 1;*/
+}
+
+td{
+	overflow-wrap: break-word;
+	flex-grow: 1;
+}
+
+td div{
+	overflow-wrap: break-word;
 }
 
 button{
@@ -157,7 +169,7 @@ button{
 	border-color: #FC540B;
 	border-style: solid;
 	border-radius: 8px;
-	border-spacing: 10px;
+	border-spacing: 4px;
 	margin: 1%;
 	padding: 0.2%;
 }
@@ -165,12 +177,12 @@ button{
 .Bigposopinion
 {
 	background-color: #93f99a;
-	border-width: 4px;
+	border-width: 2px;
 	border-color: #38a940;
 	border-style: solid;
-	border-radius: 8px;
+	border-radius: 4px;
 	display: inline-block;
-	width: 44.5%;
+	width: 46.5%;
 	margin: 1%;
 	padding: 0.2%;
 	clear: both;
@@ -182,24 +194,24 @@ button{
 	border-width: 2px;
 	border-color: #38a940;
 	border-style: solid;
-	border-radius: 8px;
-	display: inline-block;
-	width: 100%;
-	margin: 1%;
-	padding: 2%;
+	border-radius: 2px;
+	margin-left: 1%;
+	margin-right: 1%;
+	margin: 1% auto;
+	padding: 1% auto;
 }
 
 .Bignegopinion
 {
 	background-color: #f98b8b;
-	border-width: 4px;
+	border-width: 2px;
 	border-color: #f92222;
 	border-style: solid;
-	border-radius: 8px;
-	border-spacing: 10px;
+	border-radius: 4px;
+	border-spacing: 0px;
 	display: inline-block;
 	vertical-align: top;
-	width: 44.5%;
+	width: 46.5%;
 	margin: 1%;
 	padding: 0.2%;
 }
@@ -210,9 +222,8 @@ button{
 	border-width: 2px;
 	border-color: #f92222;
 	border-style: solid;
-	border-radius: 8px;
-	border-spacing: 10px;
-	display: inline-block;
+	border-radius: 4px;
+	border-spacing: 4px;
 	width: 100%;
 	vertical-align: top;
 	margin: 1%;
@@ -223,11 +234,11 @@ button{
 .Bigproposition
 {
 	background-color: #7ab3e7;
-	border-width: 4px;
+	border-width: 2px;
 	border-color: #378ddd;
 	border-style: solid;
-	border-radius: 8px;
-	border-spacing: 10px;
+	border-radius: 4px;
+	border-spacing: 4px;
 	margin: 1%;
 	padding: 0.2%;
 }
@@ -238,10 +249,10 @@ button{
 	border-width: 2px;
 	border-color: #378ddd;
 	border-style: solid;
-	border-radius: 8px;
-	border-spacing: 10px;
+	border-radius: 4px;
+	border-spacing: 4px;
 	margin: 1%;
-	padding: 0.2%;
+	padding: 1%;
 }
 
 section form{
