--- a/democratos/CreateYourLaws/static/css/style.css
+++ b/democratos/CreateYourLaws/static/css/style.css
@@ -1,4 +1,3 @@
-
 html{
 	margin: 0;
     padding: 0;
@@ -85,6 +84,15 @@ section{
 	width: 98%;
 }
 
+td {
+	width: 94%;
+	margin: 0 auto;
+	position: relative;	
+	text-overflow: ellipsis;
+	display: block;
+	overflow: hidden;
+}
+
 section p {
 	text-align: left;
 }
@@ -94,27 +102,10 @@ section ul {
 }
 
 table{
-	// overflow: auto;
-	overflow-wrap: break-word;
+	margin: 0 auto 0 auto;
+	table-layout: fixed;
 	text-align: left;
-	/*
-	display: -webkit-box;
-	display: -moz-box;
-	display: -ms-flexbox;
-	display: -webkit-flex;
-	display: flex;
-	flex-direction: column;
-	flex-wrap: wrap;
-	flex-grow: 1;*/
-}
-
-td{
-	overflow-wrap: break-word;
-	flex-grow: 1;
-}
-
-td div{
-	overflow-wrap: break-word;
+	width: 100%;
 }
 
 button{
@@ -169,22 +160,22 @@ button{
 	border-color: #FC540B;
 	border-style: solid;
 	border-radius: 8px;
-	border-spacing: 4px;
+	border-spacing: 10px;
 	margin: 1%;
-	padding: 0.2%;
+	padding: 10px;
 }
 
 .Bigposopinion
 {
 	background-color: #93f99a;
-	border-width: 2px;
+	border-width: 4px;
 	border-color: #38a940;
 	border-style: solid;
-	border-radius: 4px;
+	border-radius: 8px;
 	display: inline-block;
-	width: 46.5%;
+	width: 44.5%;
 	margin: 1%;
-	padding: 0.2%;
+	padding: 1%;
 	clear: both;
 }
 
@@ -194,26 +185,25 @@ button{
 	border-width: 2px;
 	border-color: #38a940;
 	border-style: solid;
-	border-radius: 2px;
-	margin-left: 1%;
-	margin-right: 1%;
-	margin: 1% auto;
-	padding: 1% auto;
+	border-radius: 8px;
+	display: inline-block;
+	margin: 1%;
+	padding: 2%;
 }
 
 .Bignegopinion
 {
 	background-color: #f98b8b;
-	border-width: 2px;
+	border-width: 4px;
 	border-color: #f92222;
 	border-style: solid;
-	border-radius: 4px;
-	border-spacing: 0px;
+	border-radius: 8px;
+	border-spacing: 10px;
 	display: inline-block;
 	vertical-align: top;
-	width: 46.5%;
+	width: 44.5%;
 	margin: 1%;
-	padding: 0.2%;
+	padding: 1%;
 }
 
 .negopinion
@@ -222,9 +212,9 @@ button{
 	border-width: 2px;
 	border-color: #f92222;
 	border-style: solid;
-	border-radius: 4px;
-	border-spacing: 4px;
-	width: 100%;
+	border-radius: 8px;
+	border-spacing: 10px;
+	display: inline-block;
 	vertical-align: top;
 	margin: 1%;
 	padding: 1%;
@@ -234,13 +224,13 @@ button{
 .Bigproposition
 {
 	background-color: #7ab3e7;
-	border-width: 2px;
+	border-width: 4px;
 	border-color: #378ddd;
 	border-style: solid;
-	border-radius: 4px;
-	border-spacing: 4px;
+	border-radius: 8px;
+	border-spacing: 10px;
 	margin: 1%;
-	padding: 0.2%;
+	padding: 10px;
 }
 
 .proposition
@@ -249,10 +239,10 @@ button{
 	border-width: 2px;
 	border-color: #378ddd;
 	border-style: solid;
-	border-radius: 4px;
-	border-spacing: 4px;
+	border-radius: 8px;
+	border-spacing: 10px;
 	margin: 1%;
-	padding: 1%;
+	padding: 10px;
 }
 
 section form{
@@ -281,7 +271,7 @@ section form{
 	border-style: solid;
 	border-radius: 8px;
 	margin: 1%;
-	padding: 0.2%;
+	padding: 2%;
 }
 
 
@@ -294,7 +284,7 @@ section form{
 	border-radius: 4px;
 	border-spacing: 10px;
 	margin: 1%;
-	padding: 0.2%;
+	padding: 10px;
 	width: 500px;
 }
 
@@ -307,7 +297,7 @@ section form{
 	border-radius: 4px;
 	border-spacing: 10px;
 	margin: 1%;
-	padding: 0.2%;
+	padding: 10px;
 	width: 500px;
 }
 
@@ -474,4 +464,3 @@ section form{
 	background-color: grey;
 	box-shadow: 2px 2px 1px #aaa;
  }
-
